--- a/employeeManager/src/main/resources/application.properties
+++ b/employeeManager/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/employeemanager
-spring.datasource.username=root
-spring.datasource.password=Samiboy#12
-spring.jpa.hibernate.ddl-auto =update
-spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.mvc.hiddenmethod.filter.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/emp_manager
+spring.datasource.username= root
+spring.datasource.password= Samiboy#12
 
+debug=true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto= update
+logging.level.org.hibernate.SQL=DEBUG
+spring.mvc.hiddenmethod.filter.enabled=true
