--- a/employeeManager/pom.xml
+++ b/employeeManager/pom.xml
@@ -54,6 +54,11 @@
 		    <version>6.0.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.registration</groupId>
+			<artifactId>StudentRegestiration</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
