--- a/employeeManager/src/main/resources/application.properties
+++ b/employeeManager/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/emp_manager
 spring.datasource.username= root
 spring.datasource.password= Samiboy#12
 
-debug=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto= update
 logging.level.org.hibernate.SQL=DEBUG
 spring.mvc.hiddenmethod.filter.enabled=true
+debug=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
